[package]
name = "onset-enhanced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.9"
hyper = { version = "0.14.19", features = ["full"] }
tokio = { version = "1.19.2", features = ["full"] }
tower = "0.4"
toml = "0.5.9"
serde = { version = "1.0.137", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "serde"] }
chrono = {version = "0.4", features = ["serde"] }
